--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,11 +1,18 @@
 .content {
     width: 100%;
     text-align: center;
-    padding: 10px 0;
+}
+
+.cards {
+    justify-content: space-between;
+}
+
+.btnWrapper{
+    margin: 10px;
 }
 
 .btn {
-    margin-right: 450px;
+    
     padding: 10px;
     background-color: aquamarine;
     border-color: aquamarine;
