--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,4 +3,7 @@
     height: 100%;
     align-items: center;
     padding: 10px 0;
+    margin: 10px;
+    border: 2px solid aqua;
+    border-radius: 15px;
 }
